--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.1.0",
+    "@fastify/csrf-protection": "^6.4.1",
     "@fastify/flash": "^5.1.0",
     "@fastify/formbody": "^7.4.0",
     "@fastify/postgres": "^5.2.0",
@@ -24,7 +25,8 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
     "pg": "^8.11.3",
-    "vite": "^4.4.11"
+    "vite": "^4.4.11",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
