mise en place du frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true,
   },
   "include":["public","controllers","class"],
-  "except":["node_modules"]
+  "except":["node_modules","dist"]
 }
