--- a/package.json
+++ b/package.json
@@ -20,25 +20,16 @@
     "@fastify/postgres": "^5.2.0",
     "@fastify/static": "^6.11.2",
     "@fastify/view": "^8.2.0",
-    "@tanstack/react-router": "0.0.1-beta.194",
     "@vitejs/plugin-react": "^4.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
     "pg": "^8.11.3",
-    "vite": "^4.4.11",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
     "@types/pg": "^8.10.9",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
     "nodemon": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "sass": "^1.69.3",
-    "typescript": "^5.2.2",
-    "zustand": "^4.4.3"
+    "typescript": "^5.2.2"
   }
 }
