--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
+    "lucide-react": "^0.314.0",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
