--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.1.0",
+    "@fastify/cors": "^8.5.0",
     "@fastify/csrf-protection": "^6.4.1",
     "@fastify/flash": "^5.1.0",
     "@fastify/formbody": "^7.4.0",
@@ -25,6 +26,7 @@
     "fastify": "^4.23.2",
     "lucide-react": "^0.314.0",
     "pg": "^8.11.3",
+    "react-hook-form": "^7.49.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
